# rover_simulation

./: README.md
rover_control/: CMakeLists.txt  package.xml
rover_control/config/: rover_control_sim.yaml
rover_control/launch/: rover_control.launch
rover_control/msg/: status.msg
rover_control/src/: VESC_servo_sim.py  motion_capture_sim.py  rover_sim_interface.py  rover_tf2_broadcaster.py  servo_commands_DEPRECATED.py  spd_pub_node_DEPRECATED.py  spd_yrt_controller.py  turtlebot3_teleop_remapper.py
rover_control/srv/: setArm.srv  setMode.srv
rover_description/: CMakeLists.txt  package.xml
rover_description/meshes/: body.dae  chassis.dae  wheel_tire.dae
rover_description/urdf/: macros.xacro  materials.xacro  rover.gazebo  rover.sdf  rover.xacro
rover_gazebo/: package.xml
rover_gazebo/config/: gazebo_rover_sim.yaml
rover_gazebo/launch/: Hopper_world.launch  frames.gv  rover_outdoor.launch  rover_sim.launch  rover_sim_HopperFloorG.launch  rover_sim_outdoor.launch  rover_spawn.launch
rover_gazebo/worlds/: HopperFloorG.world  HopperFloorG_Full.world  artemis.sdf  artemis.world
rover_gazebo/worlds/HopperFloorGround_Full/: model.config  model.sdf
rover_plugin/: CMakeLists.txt  plugin_test.world  rover_plugin.cc  rover_plugin.hh  rover_plugin.kdev4
rover_plugin/.kdev4/: rover_plugin.kdev4
